k8s/wms-app.yaml
############################################
# FRONTEND DEPLOYMENT
############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: wms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ajaykumara/frontend-app:latest
          ports:
            - containerPort: 80

---
############################################
# FRONTEND SERVICE (ClusterIP)
############################################
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wms
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080

---
############################################
# BACKEND DEPLOYMENT
############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ajaykumara/backend-app:latest
          ports:
            - containerPort: 5000
---
############################################
# BACKEND SERVICE (ClusterIP)
############################################
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wms
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000

---
############################################
# FRONTEND HTTPRoute
############################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: wms
spec:
  parentRefs:
    - name: wms-gateway
      namespace: nginx-gateway
  hostnames:
    - app.datanetwork.online
  rules:
    - backendRefs:
        - name: frontend-service
          port: 80

---
############################################
# BACKEND HTTPRoute
############################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: wms
spec:
  parentRefs:
    - name: wms-gateway
      namespace: nginx-gateway
  hostnames:
    - api.datanetwork.online
  rules:
    - backendRefs:
        - name: backend-service
          port: 5000
